--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hcb-mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +8,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "expo": "^49.0.8",
+    "expo-auth-session": "~5.0.2",
+    "expo-constants": "^14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-image": "^1.3.2",
+    "expo-linking": "^5.0.2",
+    "expo-secure-store": "~12.3.1",
+    "expo-status-bar": "^1.6.0",
+    "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "^0.19.8",
+    "swr": "^2.2.1",
+    "expo-blur": "~12.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.22.11"
   },
   "private": true
 }
