--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "^49.0.8",
     "expo-auth-session": "~5.0.2",
+    "expo-blur": "~12.4.1",
     "expo-constants": "^14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-image": "^1.3.2",
@@ -27,11 +28,12 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1",
-    "expo-blur": "~12.4.1"
+    "swr": "^2.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11"
+    "@babel/core": "^7.22.11",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react": "^7.33.2"
   },
   "private": true
 }
