--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint src/",
+    "lint": "eslint App.tsx src/",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "ts:check": "tsc"
   },
   "dependencies": {
@@ -38,7 +40,9 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "private": true
