--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
     "swr": "^2.2.1"
   },
