--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1"
+    "swr": "^2.2.1",
+    "expo-haptics": "~12.4.0",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
