--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint App.tsx src/",
     "format": "prettier . --write",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-menu/menu": "^0.9.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -22,24 +23,27 @@
     "expo-blur": "~12.4.1",
     "expo-constants": "^14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-haptics": "~12.4.0",
     "expo-image": "^1.3.2",
     "expo-linking": "^5.0.2",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "^1.6.0",
     "expo-system-ui": "~2.4.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
     "swr": "^2.2.1",
-    "expo-haptics": "~12.4.0",
-    "react-native-reanimated": "~3.3.0"
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
+    "@types/lodash": "^4.14.198",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
