--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "expo-constants": "^14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-haptics": "~12.4.0",
-    "expo-image": "^1.3.2",
+    "expo-image": "~1.3.3",
     "expo-linking": "^5.0.2",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "^1.6.0",
     "expo-system-ui": "~2.4.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -40,7 +40,7 @@
     "react-native-web": "^0.19.8",
     "swr": "^2.2.1",
     "expo-splash-screen": "~0.20.5",
-    "expo-dev-client": "~2.4.10",
+    "expo-dev-client": "~2.4.11",
     "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
