--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint App.tsx src/",
+    "lint:fix": "eslint App.tsx src/ --fix",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "ts:check": "tsc"
