--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@config-plugins/react-native-dynamic-app-icon": "^6.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-menu/menu": "^0.9.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -24,25 +25,27 @@
     "expo-blur": "~12.4.1",
     "expo-constants": "^14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.11",
+    "expo-dynamic-app-icon": "^1.2.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.3",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "^5.0.2",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "^1.6.0",
     "expo-system-ui": "~2.4.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-dev-client": "~2.4.11",
-    "expo-image-picker": "~14.3.2"
+    "swr": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
