--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@types/react": "~18.2.14",
+    "date-fns": "^2.30.0",
     "expo": "^49.0.8",
     "expo-auth-session": "~5.0.2",
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.11",
+    "expo-device": "~5.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.3",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "^5.0.2",
+    "expo-notifications": "~0.20.1",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "^1.6.0",
     "expo-system-ui": "~2.4.0",
     "lodash": "^4.17.21",
@@ -39,16 +44,15 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-dev-client": "~2.4.11",
-    "expo-image-picker": "~14.3.2",
-    "expo-notifications": "~0.20.1",
-    "expo-device": "~5.4.0"
+    "swr": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
+    "@types/react": "^18.2.25",
+    "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
