--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1"
+    "swr": "^2.2.1",
+    "expo-web-browser": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
