--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "^1.6.0",
     "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
+    "humanize-string": "^3.0.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.5",
@@ -44,8 +46,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1",
-    "expo-web-browser": "~12.3.2"
+    "swr": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
