--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1"
+    "swr": "^2.2.1",
+    "expo-linear-gradient": "~12.3.0",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
