--- a/package.json
+++ b/package.json
@@ -13,49 +13,50 @@
     "ts:check": "tsc"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-menu/menu": "^0.9.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^2.30.0",
-    "expo": "^49.0.8",
-    "expo-auth-session": "~5.0.2",
-    "expo-blur": "~12.4.1",
-    "expo-constants": "~14.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-dev-client": "~2.4.11",
-    "expo-device": "~5.4.0",
-    "expo-haptics": "~12.4.0",
-    "expo-image": "~1.3.3",
-    "expo-image-picker": "~14.3.2",
-    "expo-linking": "^5.0.2",
-    "expo-notifications": "~0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "^1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^50.0.8",
+    "expo-auth-session": "~5.4.0",
+    "expo-blur": "~12.9.2",
+    "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.1",
+    "expo-dev-client": "~3.3.9",
+    "expo-device": "~5.9.3",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-notifications": "~0.27.6",
+    "expo-secure-store": "~12.8.1",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
     "humanize-string": "^3.0.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "^0.19.8",
     "swr": "^2.2.1",
-    "expo-linear-gradient": "~12.3.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-pager-view": "6.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "^18.2.25",
+    "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
@@ -63,7 +64,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
