--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@config-plugins/react-native-dynamic-app-icon": "^7.0.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-menu/menu": "^0.9.1",
@@ -42,14 +43,15 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1",
-    "react-native-pager-view": "6.2.3"
+    "swr": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
