--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "ios": "APP_VARIANT=development expo run:ios",
     "web": "expo start --web",
     "lint": "eslint App.tsx src/",
     "lint:fix": "eslint App.tsx src/ --fix",
