--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "^0.19.8",
-    "swr": "^2.2.1"
+    "swr": "^2.2.1",
+    "expo-clipboard": "~5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
