--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@config-plugins/react-native-dynamic-app-icon": "^7.0.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/geolocation": "^3.3.0",
     "@react-native-menu/menu": "^0.9.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
+    "@stripe/stripe-terminal-react-native": "^0.0.1-beta.20",
     "date-fns": "^2.30.0",
     "expo": "^50.0.8",
     "expo-auth-session": "~5.4.0",
@@ -34,6 +36,8 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
+    "expo-local-authentication": "~13.8.0",
+    "expo-location": "^17.0.1",
     "expo-notifications": "~0.27.6",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
@@ -48,14 +52,14 @@
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-pager-view": "6.2.3",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "^0.19.8",
     "swr": "^2.2.1",
-    "ts-pattern": "^5.0.8",
-    "expo-local-authentication": "~13.8.0"
+    "ts-pattern": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
