--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
+    "expo-local-authentication": "~13.8.0",
     "expo-notifications": "~0.27.6",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
@@ -54,8 +55,7 @@
     "react-native-svg": "14.1.0",
     "react-native-web": "^0.19.8",
     "swr": "^2.2.1",
-    "ts-pattern": "^5.0.8",
-    "expo-local-authentication": "~13.8.0"
+    "ts-pattern": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
