--- a/package.json
+++ b/package.json
@@ -13,48 +13,47 @@
     "ts:check": "tsc"
   },
   "dependencies": {
-    "@config-plugins/react-native-dynamic-app-icon": "^7.0.0",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-menu/menu": "^0.9.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-menu/menu": "^1.1.6",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^2.30.0",
-    "expo": "^50.0.8",
-    "expo-auth-session": "~5.4.0",
-    "expo-blur": "~12.9.2",
-    "expo-clipboard": "~5.0.1",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.9",
-    "expo-device": "~5.9.3",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-local-authentication": "~13.8.0",
-    "expo-notifications": "~0.27.6",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo": "~51.0.39",
+    "expo-alternate-app-icons": "^1.1.0",
+    "expo-auth-session": "~5.5.2",
+    "expo-blur": "~13.0.2",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.29",
+    "expo-device": "~6.0.2",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
+    "expo-notifications": "~0.28.19",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "geopattern": "github:thedev132/geopattern",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-dynamic-app-icon": "^1.1.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "^0.19.8",
+    "react": "18.3.1",
+    "react-native": "0.75",
+    "react-native-gesture-handler": "~2.21.2",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.3",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "4.3.0",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "ts-pattern": "^5.0.8"
   },
