--- a/package.json
+++ b/package.json
@@ -1,78 +1,79 @@
 {
-  "name": "hcb-mobile",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "APP_VARIANT=development expo run:ios",
-    "web": "expo start --web",
-    "lint": "eslint App.tsx src/",
-    "lint:fix": "eslint App.tsx src/ --fix",
-    "format": "prettier . --write",
-    "format:check": "prettier . --check",
-    "ts:check": "tsc"
-  },
-  "dependencies": {
-    "@config-plugins/react-native-dynamic-app-icon": "^7.0.0",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-menu/menu": "^0.9.1",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.13",
-    "date-fns": "^2.30.0",
-    "expo": "^50.0.8",
-    "expo-auth-session": "~5.4.0",
-    "expo-blur": "~12.9.2",
-    "expo-clipboard": "~5.0.1",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.9",
-    "expo-device": "~5.9.3",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-local-authentication": "~13.8.0",
-    "expo-notifications": "~0.27.6",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "geopattern": "github:thedev132/geopattern",
-    "humanize-string": "^3.0.0",
-    "ky": "^1.2.3",
-    "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-dynamic-app-icon": "^1.1.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "^0.19.8",
-    "swr": "^2.2.1",
-    "ts-pattern": "^5.0.8"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@tsconfig/react-native": "^3.0.2",
-    "@types/jest": "^29.5.5",
-    "@types/lodash": "^4.14.198",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3",
-    "typescript": "^5.3.0"
-  },
-  "private": true
+    "name": "hcb-mobile",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo run:android",
+        "ios": "APP_VARIANT=development expo run:ios",
+        "web": "expo start --web",
+        "lint": "eslint App.tsx src/",
+        "lint:fix": "eslint App.tsx src/ --fix",
+        "format": "prettier . --write",
+        "format:check": "prettier . --check",
+        "ts:check": "tsc"
+    },
+    "dependencies": {
+        "@config-plugins/react-native-dynamic-app-icon": "^7.0.0",
+        "@expo/vector-icons": "^14.0.0",
+        "@react-native-async-storage/async-storage": "1.21.0",
+        "@react-native-menu/menu": "^0.9.1",
+        "@react-navigation/bottom-tabs": "^6.5.8",
+        "@react-navigation/native": "^6.1.10",
+        "@react-navigation/native-stack": "^6.9.13",
+        "date-fns": "^2.30.0",
+        "expo": "^50.0.8",
+        "expo-auth-session": "~5.4.0",
+        "expo-blur": "~12.9.2",
+        "expo-clipboard": "~5.0.1",
+        "expo-constants": "~15.4.5",
+        "expo-crypto": "~12.8.1",
+        "expo-dev-client": "~3.3.9",
+        "expo-device": "~5.9.3",
+        "expo-haptics": "~12.8.1",
+        "expo-image": "~1.10.6",
+        "expo-image-picker": "~14.7.1",
+        "expo-linear-gradient": "~12.7.2",
+        "expo-linking": "~6.2.2",
+        "expo-local-authentication": "~13.8.0",
+        "expo-notifications": "~0.27.6",
+        "expo-secure-store": "~12.8.1",
+        "expo-splash-screen": "~0.26.4",
+        "expo-status-bar": "~1.11.1",
+        "expo-system-ui": "~2.9.3",
+        "expo-web-browser": "~12.8.2",
+        "geopattern": "github:thedev132/geopattern",
+        "humanize-string": "^3.0.0",
+        "ky": "^1.2.3",
+        "lodash": "^4.17.21",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-native": "0.73.4",
+        "react-native-dynamic-app-icon": "^1.1.0",
+        "react-native-gesture-handler": "~2.14.0",
+        "react-native-pager-view": "6.2.3",
+        "react-native-reanimated": "~3.6.2",
+        "react-native-safe-area-context": "4.8.2",
+        "react-native-screens": "~3.29.0",
+        "react-native-svg": "14.1.0",
+        "react-native-web": "^0.19.8",
+        "swr": "^2.2.1",
+        "ts-pattern": "^5.0.8"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.11",
+        "@tsconfig/react-native": "^3.0.2",
+        "@types/jest": "^29.5.5",
+        "@types/lodash": "^4.14.198",
+        "@types/react": "~18.2.45",
+        "@types/react-test-renderer": "^18.0.3",
+        "@typescript-eslint/eslint-plugin": "^6.6.0",
+        "@typescript-eslint/parser": "^6.6.0",
+        "eslint": "^8.49.0",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^3.0.3",
+        "typescript": "^5.3.0"
+    },
+    "private": true
 }
