--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,7 @@
       "env": {
         "EXPO_PUBLIC_API_BASE": "https://hcb.hackclub.com/api/v4",
         "EXPO_PUBLIC_CLIENT_ID": "yt8JHmPDmmYYLUmoEiGtocYwg5fSOGCrcIY3G-vkMRs",
-        "EXPO_PUBLIC_STRIPE_API_KEY": "pk_live_UAjIP1Kss29XZ6tW0MFWkjUQ" // "pk" stands for "publishable key" you wannabe hacker
+        "EXPO_PUBLIC_STRIPE_API_KEY": "pk_live_UAjIP1Kss29XZ6tW0MFWkjUQ"
       }
     }
   },
