--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^2.30.0",
+    "eas-cli": "^13.4.2",
     "expo": "^52.0.11",
     "expo-auth-session": "~6.0.0",
     "expo-blur": "~14.0.1",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
+    "@react-native-community/cli": "^12.3.5",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
@@ -73,8 +75,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.3.0",
-    "@react-native-community/cli": "^12.3.5"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
