--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo": "^50.0.8",
     "expo-auth-session": "~5.4.0",
     "expo-blur": "~12.9.2",
+    "expo-build-properties": "^0.13.1",
     "expo-clipboard": "~5.0.1",
     "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
