--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@expo/config-plugins": "^9.0.12",
+    "@expo/image-utils": "^0.6.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.6",
@@ -20,43 +22,41 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^2.30.0",
-    "expo-alternate-app-icons": "^1.1.0",
     "eas-cli": "^13.4.2",
-    "expo": "^52.0.11",
-    "expo-auth-session": "~6.0.0",
-    "expo-blur": "~14.0.1",
-    "expo-clipboard": "~7.0.0",
-    "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.4",
-    "expo-device": "~7.0.1",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.2",
-    "expo-image-picker": "~16.0.3",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-local-authentication": "~15.0.1",
-    "expo-notifications": "^0.29.8",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "^0.29.13",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~51.0.39",
+    "expo-alternate-app-icons": "^1.1.0",
+    "expo-auth-session": "~5.5.2",
+    "expo-blur": "~13.0.2",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.29",
+    "expo-device": "~6.0.2",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
+    "expo-notifications": "~0.28.19",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "geopattern": "github:thedev132/geopattern",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
     "react": "18.3.1",
+    "react-native": "0.75",
     "react-native-gesture-handler": "~2.21.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.3",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "4.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.3",
-    "react-native-dynamic-app-icon": "^1.1.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-svg": "15.8.0",
     "swr": "^2.2.1",
     "ts-pattern": "^5.0.8"
   },
