--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native": "0.76.3",
     "react-native-dynamic-app-icon": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
