--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "ts:check": "tsc"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "^4.1.0",
-    "@expo/config-plugins": "^9.0.12",
+    "@expo/config-plugins": "~8.0.0",
     "@expo/image-utils": "^0.6.3",
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.6",
@@ -50,10 +50,9 @@
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
     "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.3",
-    "react-native-image-viewing": "^0.2.2",
+    "react-native": "0.75",
     "react-native-gesture-handler": "~2.21.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.10.5",
@@ -69,7 +68,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~18.3.12",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
@@ -78,7 +77,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
