--- a/eas.json
+++ b/eas.json
@@ -15,6 +15,9 @@
         "EXPO_PUBLIC_API_BASE": "https://hcb.hackclub.com/api/v4",
         "EXPO_PUBLIC_CLIENT_ID": "yt8JHmPDmmYYLUmoEiGtocYwg5fSOGCrcIY3G-vkMRs",
         "EXPO_PUBLIC_STRIPE_API_KEY": "pk_live_UAjIP1Kss29XZ6tW0MFWkjUQ"
+      },
+      "android": {
+        "buildType": "apk"
       }
     }
   },
