--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: CI
-on: push
+on:
+  push:
+      branches:
+        - '**'
+  pull_request:
+      branches:
+        - '**'
 jobs:
   eslint:
     name: ESLint
