--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.6",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
