--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
-    "expo-notifications": "~0.29.11",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
@@ -61,6 +60,7 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
+    "to-words": "^4.2.0",
     "ts-pattern": "^5.0.8"
   },
   "devDependencies": {
