--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EXPO_PUBLIC_API_BASE=https://ac1c-172-182-200-129.ngrok-free.app/api/v4
-EXPO_PUBLIC_CLIENT_ID=u4MXdVAXqoOzHHP_X2lwOPfh49c5C42-yW-SOw-uBG0
+EXPO_PUBLIC_API_BASE=https://hcb.hackclub.com/api/v4
+EXPO_PUBLIC_CLIENT_ID=yt8JHmPDmmYYLUmoEiGtocYwg5fSOGCrcIY3G-vkMRs
 EXPO_PUBLIC_STRIPE_API_KEY=pk_live_UAjIP1Kss29XZ6tW0MFWkjUQ
