--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
+    "expo-notifications": "^0.28.18",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
@@ -54,9 +55,9 @@
     "react-native-gesture-handler": "~2.21.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.3",
+    "react-native-reanimated": "~3.16.6",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "4.3.0",
+    "react-native-screens": "3.34.0",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
