--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
+    "expo-notifications": "^0.28.18",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
