--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
+    "to-words": "^4.2.0",
     "ts-pattern": "^5.0.8"
   },
   "devDependencies": {
