--- a/package.json
+++ b/package.json
@@ -13,54 +13,54 @@
     "ts:check": "tsc"
   },
   "dependencies": {
-    "@expo/config-plugins": "~8.0.0",
+    "@expo/config-plugins": "~9.0.0",
     "@expo/image-utils": "^0.6.3",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.6",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
-    "expo": "~51.0.39",
+    "expo": "^52.0.23",
     "expo-alternate-app-icons": "^1.1.0",
-    "expo-auth-session": "~5.5.2",
-    "expo-blur": "~13.0.2",
-    "expo-clipboard": "~6.0.3",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-device": "~6.0.2",
-    "expo-haptics": "~13.0.1",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-insights": "~0.7.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-local-authentication": "~14.0.1",
-    "expo-notifications": "^0.28.18",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-auth-session": "~6.0.1",
+    "expo-blur": "~14.0.1",
+    "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.8",
+    "expo-device": "~7.0.1",
+    "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.3",
+    "expo-image-picker": "~16.0.3",
+    "expo-insights": "~0.8.1",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-local-authentication": "~15.0.1",
+    "expo-notifications": "~0.29.11",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-pager-view": "6.3.0",
+    "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
@@ -72,7 +72,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
