changed transaction icons to be similar to HCB's

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "noImplicitAny": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "esModuleInterop": true
   },
   "extends": "expo/tsconfig.base",
   "include": ["src/**/*", "App.tsx", "env.d.ts"]
