--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@expo/image-utils": "^0.6.3",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.6",
     "@react-native-picker/picker": "2.9.0",
@@ -48,10 +51,11 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
+    "hackclub-icons-rn": "github:thedev132/hackclub-icons-rn",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
@@ -60,7 +64,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
