--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "^0.26.13",
     "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
     "hackclub-icons-rn": "github:thedev132/hackclub-icons-rn",
@@ -70,7 +71,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
