--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.20",
+    "@thedev132/hackclub-icons-rn": "^0.0.14",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
     "expo": "^52.0.23",
@@ -56,7 +57,6 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
-    "hackclub-icons-rn": "github:thedev132/hackclub-icons-rn",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
