potential workflow fix

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -8,10 +8,12 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+    env: # Set secrets as environment variables for conditional use
+      EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
     steps:
       - name: Check for EXPO_TOKEN
         run: |
-          if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
+          if [ -z "$EXPO_TOKEN" ]; then
             echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
             exit 1
           fi
