--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,6 +3,7 @@ on: pull_request
 
 jobs:
   update:
+    if: github.event.pull_request.head.repo.fork == false
     name: EAS Update
     runs-on: ubuntu-latest
     permissions:
