install expo updates

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "^0.26.13",
     "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
     "humanize-string": "^3.0.0",
