slight android changes

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
-    "@stripe/stripe-terminal-react-native": "^0.0.1-beta.20",
+    "@stripe/stripe-terminal-react-native": "0.0.1-beta.23",
     "@thedev132/hackclub-icons-rn": "^0.0.14",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
@@ -54,14 +54,14 @@
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
-    "expo-updates": "^0.26.13",
+    "expo-updates": "0.26.15",
     "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
@@ -81,7 +81,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
