--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-native": "0.76.5",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
