--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@appsignal/javascript": "^1.5.0",
+    "@appsignal/react": "^1.0.29",
     "@expo/config-plugins": "~9.0.0",
     "@expo/image-utils": "^0.6.3",
     "@expo/react-native-action-sheet": "^4.1.0",
