fall back to qr code

--- a/package.json
+++ b/package.json
@@ -74,10 +74,12 @@
     "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
+    "react-native-qr-svg": "^1.5.0",
+    "react-native-qrcode-styled": "^0.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
