--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo": "~52.0.47",
     "expo-alternate-app-icons": "^1.4.0",
     "expo-auth-session": "~6.0.3",
+    "expo-background-task": "^0.2.8",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.3",
     "expo-checkbox": "^4.1.4",
@@ -60,11 +61,13 @@
     "expo-local-authentication": "~15.0.1",
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
+    "expo-quick-actions": "^5.0.0",
     "expo-secure-store": "~14.0.0",
     "expo-share-intent": "^3.2.3",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
+    "expo-task-manager": "~13.1.6",
     "expo-ttp-edu": "^0.1.6",
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.1",
