--- a/.eas/workflows/e2e-test-android.yml
+++ b/.eas/workflows/e2e-test-android.yml
@@ -2,7 +2,7 @@ name: e2e-test-android
 
 on:
   pull_request:
-    branches: ['*'] # Run the E2E test workflow on every pull request.
+    branches: ["*"] # Run the E2E test workflow on every pull request.
 jobs:
   build_android_for_e2e:
     type: build
@@ -15,4 +15,4 @@ jobs:
     type: maestro
     params:
       build_id: ${{ needs.build_android_for_e2e.outputs.build_id }}
-      flow_path: ['.maestro/login.yml']
+      flow_path: [".maestro/login.yml"]
