--- a/eas.json
+++ b/eas.json
@@ -27,6 +27,15 @@
         "buildType": "apk"
       },
       "channel": "production"
+    },
+    "e2e-test": {
+      "withoutCredentials": true,
+      "ios": {
+        "simulator": true
+      },
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
