Make biometric login togglable

--- a/eas.json
+++ b/eas.json
@@ -26,7 +26,8 @@
       "android": {
         "buildType": "apk"
       },
-      "channel": "production"
+      "channel": "production",
+      "autoIncrement": true
     }
   },
   "submit": {
