Add iOS support for digital wallet issuing

--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@sentry/cli": "^2.44.0",
     "@sentry/react-native": "~6.14.0",
+    "@stripe/stripe-react-native": "^0.52.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.26",
     "@thedev132/hackclub-icons-rn": "^0.0.18",
     "@thedev132/yellowpages": "^1.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
-    "eas-cli": "^13.4.2",
+    "eas-cli": "^16.19.1",
     "expo": "^53.0.22",
     "expo-alternate-app-icons": "^1.4.0",
     "expo-auth-session": "~6.2.1",
@@ -89,6 +90,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.13.0",
+    "react-native-watch-connectivity": "^1.1.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "swr": "^2.3.6",
