Store Review & Screen Capture

--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-quick-actions": "^5.0.0",
+    "expo-screen-capture": "~8.0.9",
     "expo-secure-store": "~15.0.7",
     "expo-share-intent": "^5.0.1",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-store-review": "~9.0.9",
     "expo-system-ui": "~6.0.7",
     "expo-task-manager": "~14.0.8",
     "expo-ttp-edu": "^0.1.6",
