Add events pages and app layout refactor
Introduce events index and event detail pages with transactions UI
and Tap-to-Pay / mock transaction support. Add events Stack layout.

Refactor app layout: move AppContent into expo-router layout, add
cards/receipts/settings routes, share-intent handling, and reorderable
organizations list.

Add TS path aliases and SWRCacheProvider context.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "strictNullChecks": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+    },
   },
   "extends": "expo/tsconfig.base",
   "include": ["src/**/*", "app/App.tsx", "env.d.ts", "app"],
