Remove legacy pages index and add receipts header
Add PageTitle as the ListHeaderComponent for Receipts and increase
contentContainerStyle paddingTop to 62 to prevent header overlap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-    },
+      "@/*": ["./src/*"]
+    }
   },
   "extends": "expo/tsconfig.base",
-  "include": ["src/**/*", "app/App.tsx", "env.d.ts", "app", "components"],
+  "include": ["src/**/*", "app/App.tsx", "env.d.ts", "app", "components"]
 }
