--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "expo start",
     "android": "EXPO_PUBLIC_APP_VARIANT=development expo run:android",
     "ios": "EXPO_PUBLIC_APP_VARIANT=development expo run:ios",
-    "lint": "eslint App.tsx src/",
-    "lint:fix": "eslint App.tsx src/ --fix",
+    "lint": "eslint ./components/ ./app/",
+    "lint:fix": "eslint ./components/ ./app/ --fix",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "ts:check": "tsc",
